# supabase-functions-rs

./: Cargo.toml  LICENSE  LICENSE.md  README.md
src/: builder.rs  exceptions.rs  functions.rs  lib.rs
tests/: hello_test.rs  pets_test.rs
tests/functions/: README.md
tests/functions/get-pets/: index.ts
tests/functions/hello/: index.ts
