[package]
name = "functions-rs"
version = "0.1.0"
edition = "2021"
authors = ["Maxim Balabanski"]
exclude = ["/tests/functions/"]
repository = "https://github.com/MaxiBal/supabase-functions-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }